add text to About

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -13,6 +13,8 @@
     <div class="main-content"> 
     {{>header}}
     <h3>{{name}}</h3>
+    <p>This site was created by {{name}}. 
+        It uses data from databox.</p>  
     <img src="/img/me.png" alt="" class="portrait other">
     {{>footer}}
     </div>
